--- a/journal.org
+++ b/journal.org
@@ -35,5 +35,56 @@ Organizations
 Market
 Legal frame
 Entrepreneur (Startup)
+* Aula 2, 12-08-2019
+** Apresentações dos pitches.
+** Comentários
+*** Definições de empreendedorismo
+Cria negócio
+Abre/ fecha, trabalha
+Novas, + tecnologia
+Peq. negócios
 
+Inovação
+Criatividade
+Busca oportunidade
+Orientado para crescimento 
  
+Ideias
+ - Valor
+ - Soluções, necessidades
+
+Acesso -> Divulgação
+Escossistema
+ Escolher projetos
+ - habilidade
+ - interesse próprio
+ - mercado
+ - momento
+ - ser vivo
+ - flexível
+ - impacto positivo
+ - mvp
+ - inovador
+*** Projeto escolhido
+**** Tinder de projetos
+Participantes: Andrei, Scholl, Lana, Seiji, Caio (caio_ zamboni@hotmail.com).
+Tarefas:
+ - Mapear contatos que possivelmente utilizariam a plataforma.
+   - USP > AUSPIN
+   - Lana > PagSeguro
+ - Pensar em gameficação
+
+*** DONE Descrição da ideia, grupo e concorrentes.
+:LOGBOOK:
+- State "DONE"       from "TODO"       [2019-08-19 seg 14:59]
+:END:
+* Aula 3, 19-08-2019
+** Reapresentaçao das ideias e apresentação dos projetos concorrentes encontrados.
+** TODO Modelo de Negócios, CANVAS
+ - 9 módulos* 
+* Aula 4, 26-08
+* Aula 5, 02-09
+* Aula 6, 16-09-2019
+** Visita na ORACLE
+*** Banco de dados autônomo
+ML pra otimizar e automatizar essas coisas.
